// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`'postprocess' option should work with async "postprocessor" function option: errors 1`] = `[]`;

exports[`'postprocess' option should work with async "postprocessor" function option: module 1`] = `
"// Imports
var ___HTML_LOADER_IMPORT_0___ = new URL("./image.png", import.meta.url);
// Module
var code = \`<div>
  <p>{{firstname}} {{lastname}}</p>
  <img src="\${___HTML_LOADER_IMPORT_0___}" alt="alt" />
<div>
\`;
// Exports
export default code;"
`;

exports[`'postprocess' option should work with async "postprocessor" function option: result 1`] = `
"<div>
  <p>{{firstname}} {{lastname}}</p>
  <img src="replaced_file_protocol_/webpack/public/path/image-7bc91c245a8a10a4.png" alt="alt" />
<div>
"
`;

exports[`'postprocess' option should work with async "postprocessor" function option: warnings 1`] = `[]`;

exports[`'postprocess' option should work with the "postprocessor" option #1: errors 1`] = `[]`;

exports[`'postprocess' option should work with the "postprocessor" option #1: module 1`] = `
"// Imports
var ___HTML_LOADER_IMPORT_0___ = new URL("./image.png", import.meta.url);
// Module
var code = "<img src=\\"" + ___HTML_LOADER_IMPORT_0___ + "\\">\\n<img src=\\"" + 'Hello ' + (1+1) + "\\">\\n<img src=\\"" + require('./image.png') + "\\">\\n<img src=\\"" + new URL('./image.png', import.meta.url) + "\\">\\n<div>" + require('./gallery.html').default + "</div>\\n<!--Works fine, but need improve testing <div>< %= (await import('./gallery.html')).default % ></div>-->\\n";
// Exports
export default code;"
`;

exports[`'postprocess' option should work with the "postprocessor" option #1: result 1`] = `
"<img src="replaced_file_protocol_/webpack/public/path/image.png">
<img src="Hello 2">
<img src="/webpack/public/path/image.png">
<img src="replaced_file_protocol_/webpack/public/path/image.png">
<div><h2>Gallery</h2></div>
<!--Works fine, but need improve testing <div>< %= (await import('./gallery.html')).default % ></div>-->
"
`;

exports[`'postprocess' option should work with the "postprocessor" option #1: warnings 1`] = `[]`;

exports[`'postprocess' option should work with the "postprocessor" option: errors 1`] = `[]`;

exports[`'postprocess' option should work with the "postprocessor" option: module 1`] = `
"// Imports
var ___HTML_LOADER_IMPORT_0___ = new URL("./image.png", import.meta.url);
// Module
var code = \`<img src="\${___HTML_LOADER_IMPORT_0___}">
<img src="\${ 'Hello ' + (1+1) }">
<img src="\${ require('./image.png') }">
<img src="\${ new URL('./image.png', import.meta.url) }">
<div>\${ require('./gallery.html').default }</div>
<!--Works fine, but need improve testing <div>< %= (await import('./gallery.html')).default % ></div>-->
\`;
// Exports
export default code;"
`;

exports[`'postprocess' option should work with the "postprocessor" option: result 1`] = `
"<img src="replaced_file_protocol_/webpack/public/path/image-7bc91c245a8a10a4.png">
<img src="Hello 2">
<img src="/webpack/public/path/image-7bc91c245a8a10a4.png">
<img src="replaced_file_protocol_/webpack/public/path/image-7bc91c245a8a10a4.png">
<div><h2>Gallery</h2></div>
<!--Works fine, but need improve testing <div>< %= (await import('./gallery.html')).default % ></div>-->
"
`;

exports[`'postprocess' option should work with the "postprocessor" option: warnings 1`] = `[]`;
